# soa

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  soa-benchmark.cpp
cmake/: soaConfig.cmake.in
include/: soa.h
test/: CMakeLists.txt  main.cpp  soa-tests.cpp
